# thesis--text-sumarization

./: .gitignore  README.md  attention.py  baseline.ipynb  contractions.py  exp--keras.ipynb  news.py  process_predictions.py  pyproject.toml  swisstext-explore.ipynb  test_summarizers.py  ts.py
data/: README.md
lib/: predictions.py  prepare_amzn.py  scores.py  test.py  utils.py
lib/data/: __init__.py  dataset.py  prepare_amzn.py  prepare_cnndailymail.py  prepare_swisstext.py  score_model.py
lib/models/: __init__.py  bart.py  lead_3.py  t5.py
notebooks/: Untitled3.ipynb  exp--chracter-level-s2s.ipynb  exp--keras.ipynb  exp--seq-2-seq.ipynb  exp--tensorflow.ipynb  exp-seq2seq.ipynb  exp-seq2seq_2.ipynb  gpu-notebook.ipynb  handson-ml-chapter-04.ipynb  handsonml-chapter-09.ipynb  matching.ipynb
notebooks/s2s/: saved_model.pb
notebooks/s2s/variables/: variables.index
streamlits/: test_summarizers.py
