[tool.poetry]
name = "thesis--text-sumarization"
version = "0.1.0"
description = "The source code for my master thesis"
authors = ["Michael Wellner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
